--- a/react-calculator/src/App.css
+++ b/react-calculator/src/App.css
@@ -1,16 +1,20 @@
+
 body {
   background-color: black;
- 
 }
 
-.App{
+.App {
   display: flex;
   justify-content: center;
-  justify-items: center;
+  align-items: center;
 }
 
-.calculator{
+.calc-wrapper {
   background-color: white;
   width: 400px;
   border-radius: 16px;
+}
+
+.row {
+  display: flex;
 }
