--- a/react-calculator/src/components/Button.css
+++ b/react-calculator/src/components/Button.css
@@ -1,10 +1,13 @@
-.button{
-    height: 4 em;
+.button-wrapper {
+    height: 3em;
     display: flex;
     justify-content: center;
-    justify-items: center;
-    font-size: 1.5 em;
-    background-color: white;
+    align-items: center;
+    font-size: 20px;
+    background-color: #5a5a5a;
+    color: white;
     flex: 1;
-   color: #888;
-}
+  
+    margin: 4px;
+    border-radius: 25px;
+  }
